feat: Replace package source

--- a/kata-agent.service.in
+++ b/kata-agent.service.in
@@ -6,7 +6,7 @@
 
 [Unit]
 Description=Kata Containers Agent
-Documentation=https://github.com/kata-containers/agent
+Documentation=https://github.com/hfyeh/agent
 Wants=kata-containers.target
 
 [Service]
